--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -553,14 +553,61 @@
                                     <constraint firstAttribute="height" constant="44" id="gMk-qm-JG9"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kzs-NX-cLu" userLabel="Mask View">
+                                <rect key="frame" x="0.0" y="44" width="375" height="685"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="nSm-rb-nUn">
+                                        <rect key="frame" x="0.0" y="-20" width="375" height="705"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IPExchange" translatesAutoresizingMaskIntoConstraints="NO" id="D5e-jd-2py">
+                                        <rect key="frame" x="84.666666666666686" y="322.33333333333331" width="206" height="41"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="206" id="PtY-D2-yng"/>
+                                            <constraint firstAttribute="height" constant="41" id="lhH-OJ-Uzf"/>
+                                        </constraints>
+                                    </imageView>
+                                    <progressView opaque="NO" alpha="0.80000001192092896" contentMode="scaleToFill" verticalHuggingPriority="750" progressViewStyle="bar" progress="1" translatesAutoresizingMaskIntoConstraints="NO" id="hGg-aY-WAH">
+                                        <rect key="frame" x="84.666666666666686" y="371.66666666666669" width="206" height="2.6666666666666856"/>
+                                        <color key="progressTintColor" red="0.1647058824" green="0.67500001190000003" blue="0.87800002099999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="trackTintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                    </progressView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TfN-RF-v4d" userLabel="Toast holder">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="48"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="48" id="XFw-Hj-sqh"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="nSm-rb-nUn" firstAttribute="leading" secondItem="Buk-Dx-BNn" secondAttribute="leading" id="9vo-Ns-zsU"/>
+                                    <constraint firstItem="Buk-Dx-BNn" firstAttribute="top" secondItem="nSm-rb-nUn" secondAttribute="top" constant="20" id="CoR-yj-SMG"/>
+                                    <constraint firstItem="TfN-RF-v4d" firstAttribute="top" secondItem="Buk-Dx-BNn" secondAttribute="top" id="LRM-iG-umQ"/>
+                                    <constraint firstItem="hGg-aY-WAH" firstAttribute="trailing" secondItem="D5e-jd-2py" secondAttribute="trailing" id="Pp1-Dn-F2y"/>
+                                    <constraint firstItem="hGg-aY-WAH" firstAttribute="leading" secondItem="D5e-jd-2py" secondAttribute="leading" id="SlX-F6-UlI"/>
+                                    <constraint firstItem="D5e-jd-2py" firstAttribute="centerY" secondItem="Buk-Dx-BNn" secondAttribute="centerY" id="TVT-rk-eiZ"/>
+                                    <constraint firstItem="D5e-jd-2py" firstAttribute="centerX" secondItem="Buk-Dx-BNn" secondAttribute="centerX" id="ULg-2r-T3A"/>
+                                    <constraint firstItem="TfN-RF-v4d" firstAttribute="leading" secondItem="Buk-Dx-BNn" secondAttribute="leading" id="h9b-aJ-6n1"/>
+                                    <constraint firstItem="Buk-Dx-BNn" firstAttribute="trailing" secondItem="nSm-rb-nUn" secondAttribute="trailing" id="k9X-21-Ykz"/>
+                                    <constraint firstItem="Buk-Dx-BNn" firstAttribute="trailing" secondItem="TfN-RF-v4d" secondAttribute="trailing" id="lSF-zQ-1Lp"/>
+                                    <constraint firstItem="Buk-Dx-BNn" firstAttribute="bottom" secondItem="nSm-rb-nUn" secondAttribute="bottom" id="rL4-T9-V5p"/>
+                                    <constraint firstItem="hGg-aY-WAH" firstAttribute="top" secondItem="D5e-jd-2py" secondAttribute="bottom" constant="8" id="wiv-MX-bl9"/>
+                                </constraints>
+                                <viewLayoutGuide key="safeArea" id="Buk-Dx-BNn"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="uYX-cs-Uyf" firstAttribute="trailing" secondItem="Kzs-NX-cLu" secondAttribute="trailing" id="0ME-qt-pEZ"/>
                             <constraint firstItem="uYX-cs-Uyf" firstAttribute="top" secondItem="qfQ-5h-drj" secondAttribute="top" constant="50" id="6q1-KP-MKm"/>
                             <constraint firstItem="wtw-pv-dfd" firstAttribute="leading" secondItem="qfQ-5h-drj" secondAttribute="leading" id="7wv-6V-ciB"/>
+                            <constraint firstItem="Kzs-NX-cLu" firstAttribute="bottom" secondItem="uYX-cs-Uyf" secondAttribute="bottom" id="9hY-pb-vFS"/>
                             <constraint firstItem="uYX-cs-Uyf" firstAttribute="bottom" secondItem="5Xw-8d-dgg" secondAttribute="bottom" id="AeS-Nm-Lvd"/>
+                            <constraint firstItem="Kzs-NX-cLu" firstAttribute="leading" secondItem="uYX-cs-Uyf" secondAttribute="leading" id="Blq-IC-bss"/>
                             <constraint firstItem="uYX-cs-Uyf" firstAttribute="trailing" secondItem="qfQ-5h-drj" secondAttribute="trailing" id="ElG-da-zpx"/>
                             <constraint firstItem="5Xw-8d-dgg" firstAttribute="leading" secondItem="uYX-cs-Uyf" secondAttribute="leading" id="GsT-dl-b0h"/>
+                            <constraint firstItem="uYX-cs-Uyf" firstAttribute="top" secondItem="Kzs-NX-cLu" secondAttribute="top" id="NR4-Nk-aKF"/>
                             <constraint firstItem="VGl-ma-YbP" firstAttribute="centerY" secondItem="uYX-cs-Uyf" secondAttribute="centerY" id="QKo-fN-M0A"/>
                             <constraint firstItem="uYX-cs-Uyf" firstAttribute="trailing" secondItem="5Xw-8d-dgg" secondAttribute="trailing" id="X8d-ar-r9c"/>
                             <constraint firstItem="qfQ-5h-drj" firstAttribute="leading" secondItem="uYX-cs-Uyf" secondAttribute="leading" id="ZDw-Ua-gMH"/>
@@ -573,6 +620,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Dashboard" image="Dashboard" id="Kqr-SM-2lD"/>
                     <connections>
+                        <outlet property="fullMaskView" destination="Kzs-NX-cLu" id="ux9-69-g5c"/>
                         <outlet property="loadingView" destination="VGl-ma-YbP" id="IWn-Ql-Sqv"/>
                         <outlet property="proxiesSegmentController" destination="PSQ-5O-SSB" id="e42-mQ-6zM"/>
                         <outlet property="slidableView" destination="5Xw-8d-dgg" id="WZc-Zh-M2S"/>
@@ -655,7 +703,7 @@
                         <outlet property="progressView" destination="eXh-IL-aYB" id="OHm-uH-AEV"/>
                         <outlet property="toastHolderView" destination="ckb-Qp-y65" id="hDk-Ff-1SB"/>
                         <outlet property="topConstraintOutlet" destination="Vvf-VD-dkK" id="5PK-Fd-Oxe"/>
-                        <segue destination="zhc-5m-q3f" kind="show" identifier="TabbarSegueID" id="IFJ-cL-CAB"/>
+                        <segue destination="zhc-5m-q3f" kind="show" identifier="TabbarSegueID" animates="NO" id="IFJ-cL-CAB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ouh-Vg-AUG" userLabel="First Responder" sceneMemberID="firstResponder"/>
