Implement copy changes

--- a/IPSX/Flows/Register/Storyboard/Base.lproj/Register.storyboard
+++ b/IPSX/Flows/Register/Storyboard/Base.lproj/Register.storyboard
@@ -288,7 +288,7 @@
                                                     <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
-                                            <fragment content="TERMS AND CONDITIONS">
+                                            <fragment content="TERMS OF SERVICE">
                                                 <attributes>
                                                     <color key="NSColor" red="0.16551339285714287" green="0.67450980392156867" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <font key="NSFont" metaFont="system"/>
@@ -549,7 +549,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="tintColor" red="0.16862745098039217" green="0.51372549019607838" blue="0.65490196078431373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <state key="normal" title="Register with Facebook"/>
+                                <state key="normal" title="Continue with Facebook"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="border" value="YES"/>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="NO"/>
@@ -565,7 +565,7 @@
                                 <rect key="frame" x="45" y="527" width="285" height="44"/>
                                 <color key="backgroundColor" red="0.16470588235294117" green="0.67450980392156867" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <state key="normal" title="Register with Email">
+                                <state key="normal" title="Continue with Email">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -612,8 +612,8 @@
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="626-p6-04Z" secondAttribute="trailing" constant="20" symbolic="YES" id="wwU-vp-Jfs"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pick the registration method you prefer (email or facebook)" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WcS-Hq-YXV">
-                                <rect key="frame" x="45" y="135" width="285" height="38.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Join IPSX now." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WcS-Hq-YXV">
+                                <rect key="frame" x="45" y="135" width="285" height="19.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="285" id="eua-hu-er8"/>
                                 </constraints>
